<resources>
    <string name="app_name">StockApp</string>
    <!-- TODO: String usable app -->
    <string name="app_description">Actualización del stock en tiempo real.\nFácil accesibilidad para los usuarios.</string>

    <string name="accederCorreo">Acceder con el correo electrónico</string>
    <string name="accederGoogle">Acceder con Google</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="exampleGmail">example@gmail.com</string>
    <string name="hintPassword">***********</string>
    <string name="acceder">Acceder</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombreUsuario">nombre usuario</string>
    <string name="exampleTienda">example tienda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tienda">Tienda</string>
    <string name="descripcion">Descripción</string>
    <string name="id">ID:</string>
    <string name="agregar">Agregar</string>
    <string name="producto">Producto</string>
    <string name="codigo">Código</string>
    <string name="codigo_example">AX90909AS</string>
    <string name="nombre">Nombre</string>
    <string name="unidad_venta">Unidad Venta</string>
    <string name="_unidad_venta">UNIDAD VENTA</string>
    <string name="guardar">Guardar</string>
    <string name="categoria">Categoría</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="colores">Colores</string>
    <string name="marca">Marca</string>
    <string name="example_nombre_producto">Example nombre producto</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</string>
    <string name="bs">Bs.</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="precio_total">Precio Total</string>
    <string name="docena">Docena</string>
    <string name="precio_venta">Precio Venta</string>
    <string name="actualizar">Actualizar</string>
    <string name="upper_codigo">CÓDIGO</string>
    <string name="fecha_example">31/01/2023</string>
    <string name="number_example">12</string>
    <string name="fecha">Fecha</string>
    <string name="precio_unidad">Precio Unidad</string>
    <string name="ganancia">Ganancia</string>
</resources>