<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragment_Session.LoginFragment">

    <LinearLayout
        android:id="@+id/layoutToolbar"
        style="@style/styleActionBarLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLoginTitle"
            style="@style/styleTextActionBarTitle"
            android:text="@string/iniciarSesion" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbarFragmentLogin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFragmentLoginStockApp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_stockapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolbar"
        app:tint="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/linearLayoutEmail"
        style="@style/styleEditTextLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFragmentLoginStockApp">

        <ImageView
            android:id="@+id/imgFragmentLoginEmail"
            android:layout_width="@dimen/iconSize"
            android:layout_height="@dimen/iconSize"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email"
            android:tint="@color/colorPrimary"
            tools:ignore="UseAppTint" />

        <EditText
            android:id="@+id/etFragmentLoginEmail"
            style="@style/styleEditText"
            android:hint="@string/exampleGmail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        style="@style/styleEditTextLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail">

        <ImageView
            android:id="@+id/imgFragmentLoginPassword"
            android:layout_width="@dimen/iconSize"
            android:layout_height="@dimen/iconSize"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password"
            android:tint="@color/colorPrimary"
            tools:ignore="UseAppTint" />

        <EditText
            android:id="@+id/etFragmentLoginPassword"
            style="@style/styleEditText"
            android:hint="@string/hintPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btnFragmentLoginAcceder"
        style="@style/styleButtonEssential"
        android:text="@string/acceder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword" />

    <Button
        android:id="@+id/btnFragmentLoginRegistrarse"
        style="@style/styleButtonEssential"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/registrarse"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFragmentLoginAcceder" />

    <Button
        android:id="@+id/btnFragmentLoginAccederGoogle"
        style="@style/styleButtonEssential"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/accederGoogle"
        android:textColor="@color/colorBlack"
        app:icon="@drawable/ic_google"
        app:iconGravity="start"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFragmentLoginRegistrarse" />

</androidx.constraintlayout.widget.ConstraintLayout>