<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginActivity">

    <LinearLayout

        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMainTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/iniciarSesion"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeTitleLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolbar">

        <ImageView
            android:layout_width="@dimen/iconSize"
            android:layout_height="@dimen/iconSize"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email"
            android:tint="@color/colorPrimary"
            tools:ignore="UseAppTint" />

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextSize"
            android:background="@null"
            android:hint="@string/exampleGmail"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#78909C"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="@dimen/iconSize"
            android:layout_height="@dimen/iconSize"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_password"
            android:tint="@color/colorPrimary"
            tools:ignore="UseAppTint" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextSize"
            android:background="@null"
            android:hint="@string/hintPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#78909C"
            android:textSize="22sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnLoginAcceder"
        style="@style/styleTextButtom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="@dimen/elevation"
        android:text="@string/acceder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btnLoginRegistrarse"
        style="@style/styleTextButtom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorWhite"
        android:elevation="@dimen/elevation"
        android:text="@string/registrarse"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginAcceder" />

    <Button
        android:id="@+id/btnLoginAccederGoogle"
        style="@style/styleTextButtom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorWhite"
        android:contentDescription="@string/app_name"
        android:text="@string/accederGoogle"
        android:textColor="@color/colorBlack"
        app:icon="@drawable/ic_google"
        app:iconGravity="start"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginRegistrarse" />

</androidx.constraintlayout.widget.ConstraintLayout>