<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgHeaderProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHeaderProfile">

        <TextView
            android:id="@+id/tvHeaderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreUsuario"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSizeTitleLarge"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvHeaderEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exampleGmail"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSizeTitleMedium"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvHeaderTienda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exampleTienda"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSizeTitleMedium"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>