<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:paddingBottom="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutProductoCodigoContainer">

        <LinearLayout
            android:id="@+id/linearLayoutProductoNombre"
            style="@style/styleEditTextLinearLayout"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etDialog"
                style="@style/styleEditText"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDialog"
            style="@style/styleEditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/colorWhite"
            android:padding="4dp"
            android:text="@string/nombre"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutProductoNombre"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutProductoNombre"
            app:layout_constraintTop_toTopOf="@+id/linearLayoutProductoNombre" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialogCancel"
            style="@style/styleButtonEssential"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:backgroundTint="@color/colorDisable"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnDialogAccept"
            style="@style/styleButtonEssential"
            android:layout_weight="1"
            android:text="@string/aceptar" />

    </LinearLayout>

</LinearLayout>